[package]
name = "inpint-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = "0.12.7"
scraper = "0.20.0"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
uuid = "1.10.0"
